--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ kotlin.stdlib.default.dependency=false
 org.gradle.configuration-cache=true
 # Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
 org.gradle.caching=true
+
+platformPlugins = org.jetbrains.plugins.go:243.21565.23, gherkin:243.21565.23
