--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,6 +27,7 @@
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-
+        <runConfigurationProducer
+                implementation="com.github.carmooo.gobddgoland.run.GoBddRunConfigurationProducer"/>
     </extensions>
 </idea-plugin>
